# rc-edr-verifier

./: Cargo.toml  README.md  log.yaml
examples/: cmds.json
src/: cli.yml  main.rs
src/ops/: fileops.rs  mod.rs  network.rs  process.rs  util.rs
