[package]
name = "rc"
version = "0.1.0"
authors = ["dbogle <dbogle22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
serde_json = "1.0.64"
base64 = "0.13.0"