[package]
name = "rc"
version = "0.1.0"
authors = ["dbogle <dbogle22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
base64 = "0.13.0"
log = "0.4.14"
log4rs = {version = "1.0.0", features = ["json_encoder", "console_appender", "file_appender", "threshold_filter"]}